# cross-agent

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  logger.py  main.py
app/agent/: __init__.py  graph.py  prompts.py
app/agent/nodes/: __init__.py  analyzer.py  data_collector.py  human_feedback.py  intent_recognition.py  overview_generator.py  quality_review.py  report_generator.py
app/api/: __init__.py  chat.py  user_api.py  websocket.py
app/auth/: __init__.py
app/llm/: __init__.py  client.py
app/mcp/: __init__.py  base.py  factory.py  tavily.py
app/memory/: __init__.py  short_term.py  summary_memory.py
app/models/: __init__.py  enums.py  schemas.py  state.py
app/rag/: __init__.py  embedding.py  hybrid_search.py  milvus_client.py
app/report/: __init__.py  generator.py
app/task/: manager.py  runner.py
data/: auth.db  tasks.db
docs/: 技术方案文档.md  需求优化计划.md
static/: app.js  index.html  login.html  style.css  tasks.js
